# bookmark

./: Cargo.toml  LICENSE  README.md
migrations/2020-05-02-072834_initial-definition/: down.sql  up.sql
migrations/2020-05-03-082119_add-tags/: up.sql
migrations/2020-05-07-103845_enforce-tag-constraints/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
