[package]
name = "bookmark"
version = "0.1.0"
authors = ["Nicholas Whittaker <nchlswhttkr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"chrono" = "0.4.0"
clap =  "2.33.0"
diesel = { version = "1.4.0", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
