[package]
name = "bookmark"
version = "0.1.0"
authors = ["Nicholas Whittaker <nchlswhttkr@gmail.com>"]
edition = "2018"
repository = "https://github.com/nchlswhttkr/bookmark/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"chrono" = "0.4.0"
clap =  "2.33.0"
diesel = { version = "1.4.0", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }

[target.x86_64-pc-windows-msvc.dependencies]
libsqlite3-sys = { version = "0.9.0", features = ["bundled"] }
